# homebrew-veille

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  main.py  pyproject.toml
src/: app.py  db.py  emailer.py  fetcher.py  scheduler.py
src/templates/: base.html  config.html  dashboard.html  logs.html
