[project]
name = "homebrew-veille"
version = "1.0.0"
description = "Veille automatique des nouveaux paquets Homebrew avec dashboard web"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.3",
    "flask>=3.1.3",
    "jinja2>=3.1.6",
    "requests>=2.34.2",
]

[project.scripts]
brew-veille = "main:main"

[tool.uv]
package = true
